Finally got a working tensorflow model using contrib.learn!

--- a/lab-backup.ipynb
+++ b/lab-backup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def scale_unit_feature(X):\n",
+    "    unit_scaler = MinMaxScaler((0, 1))\n",
+    "    original_size = X.shape\n",
+    "    X = np.reshape(X, (X.shape[0], np.prod(X.shape[1:])))\n",
+    "    X = unit_scaler.fit_transform(X)\n",
+    "    X = np.reshape(X, original_size)\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convert_to_one_hot(y):\n",
+    "    return OneHotEncoder(3, sparse=False).fit_transform(y).astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +133,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# X = scale_unit_feature(X)\n",
+    "# y = convert_to_one_hot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape:  (470, 64, 64, 3)\n",
+      "y.shape:  (470,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('X.shape: ', X.shape)\n",
+    "print('y.shape: ', y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -168,23 +230,23 @@
      "output_type": "stream",
      "text": [
       "WARNING:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'cluster_spec': None, 'master': '', 'evaluation_master': '', 'keep_checkpoint_every_n_hours': 10000, 'save_summary_steps': 100, '_job_name': None, 'tf_random_seed': None, 'num_ps_replicas': 0, '_is_chief': True, 'keep_checkpoint_max': 5, 'tf_config': gpu_options {\n",
+      "INFO:tensorflow:Using config: {'save_summary_steps': 100, 'keep_checkpoint_max': 5, 'num_ps_replicas': 0, '_job_name': None, 'tf_random_seed': None, 'cluster_spec': None, 'master': '', 'task': 0, 'evaluation_master': '', 'tf_config': gpu_options {\n",
       "  per_process_gpu_memory_fraction: 1\n",
       "}\n",
-      ", 'task': 0, 'save_checkpoints_secs': 600}\n"
+      ", 'save_checkpoints_secs': 600, 'keep_checkpoint_every_n_hours': 10000, '_is_chief': True}\n"
      ]
     }
    ],
    "source": [
     "classifier = tf.contrib.learn.DNNClassifier(feature_columns=feature_columns,\n",
-    "                                            hidden_units=[64],\n",
+    "                                            hidden_units=[32],\n",
     "                                            enable_centered_bias=True,\n",
     "                                            n_classes=3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -197,8 +259,8 @@
       "INFO:tensorflow:Setting targets info to TensorSignature(dtype=tf.int32, shape=TensorShape([Dimension(None)]), is_sparse=False)\n",
       "INFO:tensorflow:Transforming feature_column _RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)\n",
       "INFO:tensorflow:Create CheckpointSaverHook\n",
-      "INFO:tensorflow:loss = 118.116, step = 1\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /tmp/tmp0uf3cvkw/model.ckpt.\n",
+      "INFO:tensorflow:loss = 106.553, step = 1\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /tmp/tmpl3tivwn4/model.ckpt.\n",
       "INFO:tensorflow:loss = 0.0, step = 101\n",
       "INFO:tensorflow:loss = 0.0, step = 201\n",
       "INFO:tensorflow:loss = 0.0, step = 301\n",
@@ -218,17 +280,17 @@
       "INFO:tensorflow:loss = 0.0, step = 1701\n",
       "INFO:tensorflow:loss = 0.0, step = 1801\n",
       "INFO:tensorflow:loss = 0.0, step = 1901\n",
-      "INFO:tensorflow:Saving checkpoints for 2000 into /tmp/tmp0uf3cvkw/model.ckpt.\n",
+      "INFO:tensorflow:Saving checkpoints for 2000 into /tmp/tmpl3tivwn4/model.ckpt.\n",
       "INFO:tensorflow:Loss for final step: 0.0.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Estimator(params={'gradient_clip_norm': None, 'optimizer': 'Adagrad', 'enable_centered_bias': True, 'feature_columns': [_RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)], 'activation_fn': <function relu at 0x7fc8eb91a0d0>, 'weight_column_name': None, 'n_classes': 3, 'num_ps_replicas': 0, 'dropout': None, 'hidden_units': [64]})"
+       "Estimator(params={'activation_fn': <function relu at 0x7f83e810c0d0>, 'weight_column_name': None, 'optimizer': 'Adagrad', 'gradient_clip_norm': None, 'feature_columns': [_RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)], 'hidden_units': [32], 'n_classes': 3, 'enable_centered_bias': True, 'num_ps_replicas': 0, 'dropout': None})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -248,19 +310,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Transforming feature_column _RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)\n",
-      "INFO:tensorflow:Loading model from checkpoint: /tmp/tmp0uf3cvkw/model.ckpt-2000-?????-of-00001.\n"
+      "INFO:tensorflow:Transforming feature_column _RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)\n"
      ]
     }
    ],
    "source": [
-    "y_cv_pred = classifier.predict(X_cv, as_iterable=True)\n",
-    "y_cv_pred = np.array([i[0] for i in y_cv_pred])"
+    "y_cv_pred = classifier.predict(X_cv, as_iterable=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -269,19 +329,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Transforming feature_column _RealValuedColumn(column_name='', dimension=12288, default_value=None, dtype=tf.float32, normalizer=None)\n",
-      "INFO:tensorflow:Loading model from checkpoint: /tmp/tmp0uf3cvkw/model.ckpt-2000-?????-of-00001.\n"
+      "INFO:tensorflow:Loading model from checkpoint: /tmp/tmpl3tivwn4/model.ckpt-2000-?????-of-00001.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 2, 2, 0, 1, 2, 2, 1, 0, 1, 2, 0, 0, 0, 0, 2, 2, 0, 2, 0, 1, 2, 2, 1, 0, 1, 1, 2, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 2, 0, 1, 0, 1, 1, 0, 0, 1, 2, 0, 1, 1, 1, 1, 1, 2, 2, 0, 1, 2, 2, 1, 2, 2, 2, 2, 1, 1, 0, 0, 2, 2, 2, 1, 0, 2, 0, 2, 2, 0, 2, 2, 2, 0, 2, 0, 0, 1, 2, 2, 1, 1, 0]\n"
      ]
     }
    ],
    "source": [
-    "y_cv_pred_proba = classifier.predict_proba(X_cv, as_iterable=True)\n",
-    "y_cv_pred_proba = np.array([i for i in y_cv_pred_proba])"
+    "y_cv_pred = [i[0] for i in y_cv_pred]\n",
+    "print(y_cv_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score:  0.978723404255\n"
+      "Accuracy score:  0.968085106383\n"
      ]
     }
    ],
@@ -300,22 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Log loss:  0.73486758293\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Log loss: ', log_loss(y_true=y_cv, y_pred=y_cv_pred_proba, labels=[0,1,2]))"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
